--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
     "react-snowfall": "^2.1.1",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.14",
     "web-vitals": "^2.1.4",
     "zustand": "^4.5.5"
   },
